@@ -1,6 +1,7 @@
 Release Notes
 
 * 2/4/2016
+  * changed finishTask to ignore failGoalUnreached
   * setting nucleus and eventService in jobSpec
 
 * 2/3/2016
